# AI4BayesCode

./: .gitignore  AI_AGENT_INSTALL.md  LICENSE  README.md  SKILL.md  THIRD_PARTY_LICENSES.md  start.md
python/: MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  setup.py
python/AI4BayesCode/: __init__.py  _blocks.py  diagnose.py  doc.py  example.py  generate.py  install_block.py  meta.py  new_frozen.py  perf_hint.py  plot_dag.py  rhat_summary.py  run_chains.py  source.py  sourceCpp.py  utils.py
python/AI4BayesCode/_examples/: ARDLasso.cpp  BSplineRegression.cpp  BartNoise.cpp  BetaBernoulli.cpp  CategoricalIsingChainVI.cpp  DPGaussianMixture.cpp  DPGaussianMixture_DerivedAlpha.cpp  DirichletHierarchical.cpp  DirichletSimplex.cpp  DirichletSparse.cpp  FiniteGaussianMixture.cpp  GBartHeteroscedastic.cpp  GBartLogistic.cpp  GBartMultinomial.cpp  GBartPoisson.cpp  GMRFPrior.cpp  GPClassification.cpp  GPRegression.cpp  GPTimeSeries.cpp  GaussianLocationScale.cpp  HDPGaussianMixture.cpp  HMMGaussian2State.cpp  HSGPRegression.cpp  HierarchicalLM_MultivariateRE.cpp  HierarchicalLM_joint.cpp  ICARSpatialGMRF.cpp  IRT1PL_joint.cpp  IsingHiddenPotts.cpp  IsingPrior.cpp  LdaCollapsedGibbs.cpp  LinearRegJointMixed.cpp  LogisticRegression.cpp  ODE_SIR.cpp  OrderMCMCBN.cpp  PYGaussianMixture.cpp  PehSharedFrailty.cpp  ProbitRegression.cpp  SoftBartNoise.cpp  SpikeSlabRJMCMC.cpp  SpikeSlabSinhBijection.cpp  (+2 more)
python/AI4BayesCode/_skills/: block_catalogue.md  codegen.md  codegen_cpp.md  (+8 more)
python/tests/: test_diagnose_hardening.py  test_doc.py  test_generate.py
(+656 files in other folders)
